# imistyrain-MobileFaceNet

./: CMakeLists.txt  MobileFaceNet.sln  README.md  clean.bat  mobilefacenet_train.sh
caffe/: mobilefacenet_solver.prototxt  mobilefacenet_train.sh
models/: convertmodel.bat
mxnet/: mxnet2ncnn.bat
py/: extracet_params.py  py.pyproj
src/: main.cpp  mobilefacenet.cpp  mobilefacenet.h
